--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
               rel="stylesheet">
 
       <!-- Custom styles for this template-->
-      <link href="css/sb-admin-2.min.css" rel="stylesheet">
+      <link href="css/sb-admin-2.css" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body id="page-top">
@@ -26,9 +26,9 @@
 
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-    <!-- built files will be auto injected -->
+    <!--font-awsome cdn-->
+    <script src="https://kit.fontawesome.com/d3c602d3e7.js" crossorigin="anonymous"></script>
   </body>
 </html>
